# LLM-Deployment

./: .gitignore  recording-2026-01-28-09-20-47.amr
.claude/skills/deploy-genie-llm/: SKILL.md
genie-on-device/: INDEX.md
genie-on-device/android/: .gitignore  gradle.properties  settings.gradle.kts
genie-on-device/android/app/: build.gradle.kts  proguard-rules.pro
genie-on-device/app-rn/: App.tsx  app.json  package-lock.json  package.json
genie-on-device/app-rn/android/: settings.gradle
genie-on-device/app-rn/android/app/: build.gradle
genie-on-device/app-rn/android/app/src/main/cpp/: CMakeLists.txt  genie_bridge.cpp
genie-on-device/app-rn/android/app/src/main/cpp/include/Genie/: GenieCommon.h  GenieNode.h
genie-on-device/app-rn/src/: genie.ts  store.ts  theme.ts
genie-on-device/app-rn/src/components/: Bubble.tsx  Composer.tsx  Sheet.tsx
genie-on-device/app-rn/src/screens/: ChatListScreen.tsx  ChatScreen.tsx
genie-on-device/docker/: Dockerfile
genie-on-device/docs/: ANDROID-APP.md  ANDROID-RN-APP.md  ARCHITECTURE.md  CHATBOT.md  HANDOFF-canary-qwen-offline.md  HANDOFF-whisper-llama-voice-assistant.md  README.md  REPRODUCTION.md  USAGE.md
genie-on-device/scripts/: 00_env.sh  01_build_image.sh  02_configure_hub.sh  03_list_devices.sh  04_export_model.sh  05_deploy_and_run.sh  06_voice_assistant.py  07_chatbot.py  08_stage_whisper.sh  09_stage_qairt_for_app.sh  10_push_app_model.sh  ask.sh
genie-on-device/scripts/chatbot/: __init__.py  agent.py  device.py  dictation.py  llama.py  prompt.py  tools.py
genie-on-device/tests/: test_chatbot.py
(+49 files in other folders)
